Fixed 8, 9 point. Created 10,33,34,35 tests.